# regulated_ml_platform

./: .gitignore  Makefile  README.md  RESTORE_SOURCE.md  docker-compose.registry.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-mlflow.txt  requirements-onnx.txt  requirements-runtime.txt  requirements.txt
bundles/: platform_source_v0.5.0.tar.xz.b64.part001  platform_source_v0.5.0.tar.xz.b64.part002  regulated_ml_platform_v0.5.0.tar.xz.b64.part001  regulated_ml_platform_v0.5.0.tar.xz.b64.part002
config/: accelerator_policy.yaml  canary_gate.yaml  continuous_ops.yaml  environment_promotion.yaml  gpu_autoscaling.yaml  model_registry.yaml  policy.yaml  promotion_gate.yaml  roihu_gpu_evidence_policy.yaml  triton_capacity_policy.yaml
docker/: Dockerfile  Dockerfile.mlflow  Dockerfile.registry  TritonModelRepository.Dockerfile
docs/: actions_troubleshooting.md  architecture.md  canary_runtime.md  champion_challenger_policy.md  gpu_serving.md  model_card.md  model_contract.md  model_registry.md  production_operations.md  progressive_delivery.md  registry_runtime.md  release_approval_pack.md  release_workflow.md  reproducibility_manifest.md  roihu_gpu_evidence.md  roihu_gpu_execution_record.md  roihu_jd_gap_lab.md  rollback_policy.md  slo_error_budget.md  triton_capacity_evidence.md  triton_runtime_evidence.md  triton_serving.md
examples/: canary_metrics_pass.json  canary_metrics_rollback.json  review_request.json
k8s/: deployment.yaml  hpa.yaml  network-policy.yaml  pod-disruption-budget.yaml  service-account.yaml  service.yaml
(+189 files in other folders)
